<resources>
    <string name="app_name">AviaTickets</string>
    <string name="searching_cheap_tickets">Поиск дешевых\nавиабилетов</string>
    <string name="input_hint_from">Откуда - Москва</string>
    <string name="input_hint_to">Куда - Турция</string>
    <string name="title_offers">Музыкально отлететь</string>
    <string name="min_price">от %1$s ₽</string>
    <string name="button_show_all_destinations">Показать все места</string>
    <string name="greeting">Ваш первый раз</string>
    <string name="unavailable">Недоступно</string>
    <string name="aviatickets">Авиабилеты</string>
    <string name="hotels">Отели</string>
    <string name="shorter">Короче</string>
    <string name="profile">Профиль</string>
    <string name="subscriptions">Подписки</string>
    <string name="option_complex_route">Сложный\nмаршрут</string>
    <string name="option_anywhere">Куда угодно</string>
    <string name="option_weekend">Выходные</string>
    <string name="option_hot">Горячие\nбилеты</string>
    <string name="badge_popular">Популярное направление</string>
    <string name="chip_backward">обратно</string>
    <string name="chip_filter">фильтры</string>
    <string name="direct_flights">Прямые рейсы</string>
    <string name="show_all_flights">Показать все</string>
    <string name="show_all_tickets">Посмотреть все билеты</string>
    <string name="subscribe_on_price">Подписка на цену</string>
    <string name="fab_filter">Фильтр</string>
    <string name="price_chart">График цен</string>
    <string name="dialog_invalid_town_title">Неверно указан город</string>
    <string name="dialog_invalid_departure_town_message">Укажите город отправления, используя только символы кириллицы</string>
    <string name="dialog_invalid_arrival_town_message">Укажите город прибытия, используя только символы кириллицы</string>
    <string name="dialog_neutral_button">Окей</string>
    <string name="price">%1$s ₽</string>
    <string name="flight_date">%1$s, %2$s</string>
    <string name="passengers_count">%1$d, %2$s</string>
    <string name="seats_class_economy">эконом</string>
    <string name="seats_class_premium">премиум</string>
    <string name="seats_class_business">бизнес</string>
    <string name="seats_class_first">первый класс</string>
    <string name="dialog_passengers_title">Укажите пассажиров</string>
    <string name="count">Количество:</string>
    <string name="approve">Подтвердить</string>
</resources>