<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="none"
    tools:context=".ui.screen.AviaTicketsOffersFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/Title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="40dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textColor="@color/grey_7"
            android:text="@string/searching_cheap_tickets" />

        <!-- Searchbar -->

        <FrameLayout
            android:id="@+id/searchbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/screen_padding"
            android:padding="16dp"
            android:background="@drawable/shape_rounded_2"
            android:backgroundTint="@color/grey_3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/shape_rounded_2"
                android:backgroundTint="@color/grey_4">

                <ImageView
                    android:layout_width="@dimen/icon_size_3"
                    android:layout_height="@dimen/icon_size_3"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/ic_search"
                    android:scaleType="fitCenter"
                    app:tint="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <EditText
                        android:id="@+id/input_from"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_hint_from"
                        android:singleLine="true"
                        android:imeOptions="actionNext"
                        android:nextFocusDown="@id/input_to"
                        android:maxLength="30"
                        tools:text="Минск"/>

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp"
                        app:dividerColor="@color/grey_5"/>

                    <EditText
                        android:id="@+id/input_to"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_hint_to"
                        android:singleLine="true"
                        android:imeOptions="actionSearch"
                        android:maxLength="30"/>

                </LinearLayout>

            </LinearLayout>

        </FrameLayout>

        <!-- Offers -->

        <TextView
            style="@style/Title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/screen_padding"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="24dp"
            android:text="@string/title_offers" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/offers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="-16dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_offer"/>

        <Button
            android:id="@+id/show_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/screen_padding"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="32dp"
            android:text="@string/button_show_all_destinations"
            app:backgroundTint="@color/grey_3" />

        <TextView
            style="@style/Title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/screen_padding"
            android:layout_marginBottom="24dp"
            android:text="@string/greeting"
            android:textColor="@color/grey_4" />

    </LinearLayout>

</ScrollView>