<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/screen_padding"
    android:background="@drawable/shape_rounded_2"
    android:backgroundTint="@color/grey_2">

    <TextView
        style="@style/Title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_passengers_title"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="32dp">

        <TextView
            style="@style/Text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count"
            android:textColor="@color/grey_6"/>

        <TextView
            style="@style/Title3"
            android:id="@+id/count_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            tools:text="2" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:max="5"
        android:min="1"
        tools:progress="2"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="32dp">

        <TextView
            style="@style/Text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Класс:"
            android:textColor="@color/grey_6"/>

        <TextView
            style="@style/Title3"
            android:id="@+id/seat_class_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            tools:text="Эконом" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/seat_class"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:max="3"
        android:min="0"
        tools:progress="0"/>

    <Button
        android:id="@+id/approve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/grey_4"
        android:text="@string/approve"/>

</LinearLayout>