<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <!-- Searchbar -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="48dp"
        android:layout_marginHorizontal="@dimen/screen_padding"
        android:paddingStart="8dp"
        android:paddingEnd="16dp"
        android:paddingVertical="16dp"
        android:background="@drawable/shape_rounded_2"
        android:backgroundTint="@color/grey_3">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="@dimen/icon_size_3"
            android:layout_height="@dimen/icon_size_3"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_back" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/Title3"
                    android:id="@+id/from"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/input_hint_from"
                    android:singleLine="true"
                    android:nextFocusDown="@id/input_to"
                    tools:text="Минск"/>

                <ImageButton
                    android:id="@+id/swap"
                    android:layout_width="@dimen/icon_size_3"
                    android:layout_height="@dimen/icon_size_3"
                    android:src="@drawable/ic_swap" />

            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:background="@color/grey_4"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/input_to"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/input_hint_to"
                    android:singleLine="true"
                    android:imeOptions="actionSearch"
                    android:maxLength="30"
                    tools:text="Сочи" />

                <ImageButton
                    android:id="@+id/clear"
                    android:layout_width="@dimen/icon_size_3"
                    android:layout_height="@dimen/icon_size_3"
                    android:src="@drawable/ic_close" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <!-- Chips -->

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/chip_backward_ticket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/screen_padding"
                android:gravity="center_vertical"
                android:background="@drawable/shape_chip">

                <ImageView
                    style="@style/IconStyle"
                    android:layout_width="@dimen/icon_size_4"
                    android:layout_height="@dimen/icon_size_4"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_plus"/>

                <TextView
                    style="@style/Title4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_backward"/>
                
            </LinearLayout>

            <LinearLayout
                android:id="@+id/chip_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="8dp"
                android:gravity="center_vertical"
                android:background="@drawable/shape_chip">

                <!-- Uses spannable string in order to change colors inside the text -->
                <TextView
                    style="@style/Title4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="24 фев, сб"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/chip_passengers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@drawable/shape_chip">

                <ImageView
                    style="@style/IconStyle"
                    android:layout_width="@dimen/icon_size_4"
                    android:layout_height="@dimen/icon_size_4"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_person"
                    app:tint="@color/grey_5"/>

                <TextView
                    style="@style/Title4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="1, эконом"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/chip_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="@dimen/screen_padding"
                android:gravity="center_vertical"
                android:background="@drawable/shape_chip">

                <ImageView
                    style="@style/IconStyle"
                    android:layout_width="@dimen/icon_size_4"
                    android:layout_height="@dimen/icon_size_4"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_filter"/>

                <TextView
                    style="@style/Title4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_filter"/>

            </LinearLayout>

        </LinearLayout>
    </HorizontalScrollView>

    <!-- Recommended flights -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/screen_padding"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:background="@drawable/shape_rounded_2"
        android:backgroundTint="@color/grey_1">

        <TextView
            style="@style/Title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direct_flights"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/direct_flights"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:overScrollMode="never"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_flight"
            tools:itemCount="3"/>

        <Button
            style="@style/Widget.Material3.Button.TextButton"
            android:id="@+id/show_all_flights"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textFontWeight="600"
            android:textStyle="normal"
            android:text="@string/show_all_flights"/>

    </LinearLayout>

    <Button
        android:id="@+id/show_all_tickets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/screen_padding"
        android:layout_marginVertical="24dp"
        android:text="@string/show_all_tickets"/>

    <LinearLayout
        android:id="@+id/subscribe_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="@dimen/screen_padding"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:background="@drawable/shape_rounded_3"
        android:backgroundTint="@color/grey_1">

        <ImageView
            style="@style/IconStyle"
            android:layout_width="@dimen/icon_size_3"
            android:layout_height="@dimen/icon_size_3"
            android:src="@drawable/ic_bell"
            app:tint="?attr/colorPrimary"/>

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/subscribe_on_price"
            tools:checked="true"/>

    </LinearLayout>

</LinearLayout>